@@ -2,6 +2,7 @@
 
 	! Changed Index Queue tables to use InnoDB engine
 
+	* Changed the Index Queue to also remove indexing properties for existing Index Queue items when clearing the queue
 	* Added a column in the Index Queue indexing properties table to identify which site a property belongs to
 	* Added a column in the Index Queue table to signal that an item has additional indexing properties
 	* Refactored initialization of the Index Queue to be more modular and allow finer control over what goes into the Index Queue
